--- a/assets/style.css
+++ b/assets/style.css
@@ -10,6 +10,7 @@ body {
 header {
     text-align: center;
     background: linear-gradient(to right, #ff8c00, #ff2d55);
+    padding: 5px;
 }
 
 .btn-primary:hover {
@@ -42,4 +43,9 @@ header {
     display: inline-flex;
     color: white;
     background-color: rgb(76, 0, 255);
+}
+
+img {
+    height: 50px;
+    width: 50px;
 }
